--- a/week-11/day_02_Spring+MySQL/Todos_MySQL/src/main/resources/templates/index.html
+++ b/week-11/day_02_Spring+MySQL/Todos_MySQL/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title> Todo2 #</title>
+    <title> Todo2 </title>
     <link rel="stylesheet"/>
     <meta charset="utf-8" />
 </head>
