feat(Todo_MySQL): search by title

--- a/week-11/day_02_Spring+MySQL/Todos_MySQL/src/main/resources/templates/edit.html
+++ b/week-11/day_02_Spring+MySQL/Todos_MySQL/src/main/resources/templates/edit.html
@@ -19,7 +19,7 @@
         <label th:for="Urgent" th:text="'Urgent'"></label>
         <input type="checkbox" th:field="*{urgent}" />
     </div>
-    <p><button th:type="submit" name="submit" value="submit"> Edit </button></p>
+    <p><input type="submit" value="Edit"/></p>
     <span><a href="/list"> Cancel </a></span>
 </form>
 
