--- a/week-11/day_02_Spring+MySQL/Todos_MySQL/src/main/resources/templates/add.html
+++ b/week-11/day_02_Spring+MySQL/Todos_MySQL/src/main/resources/templates/add.html
@@ -10,9 +10,8 @@
 <form action="#" th:action="@{/todo/save}" method="post">
     <p><label for="title"> Title: </label>
         <input type="text" id="title" name="title"/></p>
-
-    <p><button th:type="submit" name="submit" value="submit"> Add </button></p>
+    <p><input type="submit" value="Add"/></p>
 </form>
-<p><a href="/todo/add"> Cancel </a></p>
+<p><a href="/list"> Cancel </a></p>
 </body>
 </html>
