--- a/week-11/day_02_Spring+MySQL/Todos_MySQL/src/main/resources/templates/searchresults.html
+++ b/week-11/day_02_Spring+MySQL/Todos_MySQL/src/main/resources/templates/searchresults.html
@@ -6,16 +6,10 @@
     <meta charset="utf-8" />
 </head>
 <body>
-<h1>Todos for today: </h1>
+<h1>Search results: </h1>
 
-<p> <a href="/todo/add"> Add new todo </a></p>
-
-<form action="#" th:action="@{/search}" method="post">
-    <p><label for="title"> Title: </label>
-        <input type="text" id="title" name="title"/>
-        <input type="submit"  value="Search"/></p>
-</form>
-
+<span th:if="${errorflag}" style="color: red"> Todo cannot be found. </span>
+<span th:unless="${errorflag}">
 <table style="width:50%; height:80px; font-size: large">
     <tr style="background-color:teal">
         <th>No</th>
@@ -26,7 +20,7 @@
         <th></th>
         <th></th>
     </tr>
-    <tr th:each="currentTodo : ${todos}" style="background-color:lightgray" align="center">
+    <tr th:each="currentTodo : ${searchedTodoList}" style="background-color:lightgray" align="center">
         <td th:text="${currentTodoStat.index+1}"></td>
         <td><a th:href="@{/todo/todopage(id=${currentTodo.id})}"><span th:text="${currentTodo.title}"></span></a></td>
         <td th:text="${currentTodo.done}"></td>
@@ -36,5 +30,9 @@
         <td><a th:href="@{/todo/edit(id=${currentTodo.id})}" > edit </a></td>
     </tr>
 </table>
+</span>
+
+<p><a href="/list"> Cancel </a></p>
+
 </body>
 </html>
