--- a/week-11/day_02_Spring+MySQL/Todos_MySQL/src/main/resources/templates/editAssignee.html
+++ b/week-11/day_02_Spring+MySQL/Todos_MySQL/src/main/resources/templates/editAssignee.html
@@ -12,7 +12,7 @@
     <p><label for="name"> Name: </label>
         <input type="text" id="name" th:field="*{name}"/></p>
     <div>
-        <p><label for="email"> Name: </label>
+        <p><label for="email"> E-mail: </label>
             <input type="text" id="email" th:field="*{email}"/></p>
     </div>
     <p><input type="submit" value="Edit"/></p>
